--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ decorator==5.1.1
 distlib==0.3.4
 Django==3.2.5
 django-bootstrap4==22.1
+django-crispy-forms==1.14.0
 django-storages==1.12.3
 docopt==0.6.2
 filelock==3.6.0
