--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,5 @@
-chatbot/__pycache__/__init__.cpython-39.pyc
-chatbot/__pycache__/admin.cpython-39.pyc
-chatbot/__pycache__/apps.cpython-39.pyc
-chatbot/__pycache__/models.cpython-39.pyc
-chatbot/__pycache__/urls.cpython-39.pyc
-chatbot/__pycache__/views.cpython-39.pyc
-chatbot/migrations/__init__.py
-chatbot/migrations/__pycache__/__init__.cpython-39.pyc
-places/__pycache__/__init__.cpython-39.pyc
-places/__pycache__/admin.cpython-39.pyc
-places/__pycache__/apps.cpython-39.pyc
-places/__pycache__/models.cpython-39.pyc
-places/__pycache__/urls.cpython-39.pyc
-places/__pycache__/views.cpython-39.pyc
-places/migrations/__init__.py
-places/migrations/__pycache__/__init__.cpython-39.pyc
-TourismRecommendationSystem/__pycache__/__init__.cpython-39.pyc
-TourismRecommendationSystem/__pycache__/settings.cpython-39.pyc
-TourismRecommendationSystem/__pycache__/urls.cpython-39.pyc
-TourismRecommendationSystem/__pycache__/views.cpython-39.pyc
-TourismRecommendationSystem/__pycache__/wsgi.cpython-39.pyc
 db.sqlite3
-chatbot/migrations/0005_search_results.py
-chatbot/migrations/0006_alter_search_results.py
-chatbot/migrations/__pycache__/0005_search_results.cpython-39.pyc
-chatbot/migrations/__pycache__/0006_alter_search_results.cpython-39.pyc
-chatbot/migrations/*
-.vscode/launch.json
+*/__pycache__/*
+*/migrations/*
+.vscode/*
 .gitignore
