--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,36 @@
 asgiref==3.4.1
-autopep8==1.6.0
-azure-core==1.23.1
-azure-storage-blob==12.11.0
-backoff==1.11.1
-beautifulsoup4==4.10.0
-Bottleneck==1.3.4
-brotlipy==0.7.0
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.4
-click==8.1.2
-colorama==0.4.4
-cryptography==36.0.0
-decorator==5.1.1
-distlib==0.3.4
+backoff==2.1.2
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.0
+cryptography==37.0.4
+dj-database-url==0.5.0
 Django==3.2.5
-django-bootstrap4==22.1
 django-crispy-forms==1.14.0
-django-storages==1.12.3
+django-on-heroku==1.1.2
 docopt==0.6.2
-filelock==3.6.0
-future==0.18.2
-geocoder==1.38.1
 geographiclib==1.52
 geopy==2.2.0
+gunicorn==20.1.0
 idna==3.3
-isodate==0.6.1
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
-mock==4.0.3
-msrest==0.6.21
-networkx==2.8
-nominatim==0.1
-numexpr==2.8.1
-numpy==1.21.5
-oauthlib==3.2.0
+numpy==1.23.1
 opencage==2.0.0
-packaging==21.3
-pandas==1.4.1
-pip==21.2.4
-pipenv==2022.4.20
+pandas==1.4.3
+pip==22.1.2
 pipreqs==0.4.11
-platformdirs==2.5.2
 psycopg2==2.8.6
-pybbn==3.2.1
-pycodestyle==2.8.0
+psycopg2-binary==2.9.3
 pycparser==2.21
 pyOpenSSL==22.0.0
-pyparsing==3.0.4
-PySocks==1.7.1
 python-dateutil==2.8.2
-pytz==2021.3
-ratelim==0.1.6
-requests==2.27.1
-requests-oauthlib==1.3.1
-scipy==1.8.0
-setuptools==58.0.4
+pytz==2022.1
+requests==2.28.1
+setuptools==61.2.0
 six==1.16.0
-soupsieve==2.3.1
 sqlparse==0.4.1
-tables==3.7.0
-toml==0.10.2
 typing_extensions==4.1.1
-urllib3==1.26.8
-virtualenv==20.14.1
-virtualenv-clone==0.5.7
+urllib3==1.26.10
 wheel==0.37.1
-win-inet-pton==1.1.0
+whitenoise==6.2.0
 wincertstore==0.2
 yarg==0.1.9
